skaffold-project/k8s/core-service.yml
kind: Service
apiVersion: v1
metadata:
  name: core-service
spec:
  selector:
    app: core
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
