skaffold-project/k8s/notification-service.yml
kind: Service
apiVersion: v1
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
